# pcre2

./: .editorconfig  .gitattributes  .gitignore  132html  AUTHORS  AUTHORS.md  BUILD.bazel  CMakeLists.txt  CNAME  ChangeLog  HACKING  INSTALL  LICENCE  LICENCE.md  MODULE.bazel  Makefile.am  Makefile.in  NEWS  NON-AUTOTOOLS-BUILD  PrepareRelease  README  README.md  RunGrepTest  RunGrepTest.bat  RunTest  RunTest.bat  SECURITY.md  SUPPORT-LIFECYCLE.md  aclocal.m4  autogen.sh  build.zig  config-cmake.h.in  configure  configure.ac  index.md  libpcre2-16.pc.in  libpcre2-32.pc.in  libpcre2-8.pc.in  libpcre2-posix.pc  libpcre2-posix.pc.in  (+6 more)
.github/: codecov.yml  dependabot.yml
.github/scripts/: merge_sarif.py
.github/workflows/: build.yml  cifuzz.yml  clang-analyzer.yml  codeql.yml  dev.yml  pages.yml  scorecards.yml  sync.yml  syncpages.yml
cmake/: FindEditline.cmake  FindPackageHandleStandardArgs.cmake  FindReadline.cmake  PCRE2CheckLinkerFlag.cmake  PCRE2CheckVscript.cmake  PCRE2UseSystemExtensions.cmake  PCRE2WarningAsError.cmake  pcre2-config.cmake.in
doc/: index.html.src  pcre2-config.1  pcre2-config.txt  pcre2.3  pcre2.txt  pcre2_callout_enumerate.3  pcre2_code_copy.3  pcre2_code_copy_with_tables.3  pcre2_code_free.3  pcre2_compile.3  pcre2_compile_context_copy.3  pcre2_compile_context_create.3  pcre2_compile_context_free.3  pcre2_config.3  pcre2_convert_context_copy.3  pcre2_convert_context_create.3  pcre2_convert_context_free.3  pcre2_converted_pattern_free.3  pcre2_dfa_match.3  pcre2_general_context_copy.3  pcre2_general_context_create.3  pcre2_general_context_free.3  pcre2_get_error_message.3  pcre2_get_mark.3  pcre2_get_match_data_heapframes_size.3  pcre2_get_match_data_size.3  pcre2_get_ovector_count.3  pcre2_get_ovector_pointer.3  pcre2_get_startchar.3  pcre2_jit_compile.3  pcre2_jit_free_unused_memory.3  pcre2_jit_match.3  pcre2_jit_stack_alloc.3  pcre2_jit_stack_assign.3  pcre2_jit_stack_create.3  pcre2_jit_stack_free.3  pcre2_maketables.3  pcre2_maketables_free.3  pcre2_match.3  pcre2_match_context_copy.3  (+68 more)
doc/html/: NON-AUTOTOOLS-BUILD.txt  README.txt  index.html  pcre2-config.html  pcre2.html  pcre2_callout_enumerate.html  pcre2_code_copy.html  pcre2_code_copy_with_tables.html  pcre2_code_free.html  pcre2_compile.html  pcre2_compile_context_copy.html  pcre2_compile_context_create.html  pcre2_compile_context_free.html  pcre2_config.html  pcre2_convert_context_copy.html  pcre2_convert_context_create.html  pcre2_convert_context_free.html  pcre2_converted_pattern_free.html  pcre2_dfa_match.html  pcre2_general_context_copy.html  pcre2_general_context_create.html  pcre2_general_context_free.html  pcre2_get_error_message.html  pcre2_get_mark.html  pcre2_get_match_data_heapframes_size.html  pcre2_get_match_data_size.html  pcre2_get_ovector_count.html  pcre2_get_ovector_pointer.html  pcre2_get_startchar.html  pcre2_jit_compile.html  pcre2_jit_free_unused_memory.html  pcre2_jit_match.html  pcre2_jit_stack_alloc.html  pcre2_jit_stack_assign.html  pcre2_jit_stack_create.html  pcre2_jit_stack_free.html  pcre2_maketables.html  pcre2_maketables_free.html  pcre2_match.html  pcre2_match_context_copy.html  (+65 more)
m4/: pcre2_check_vscript.m4  pcre2_visibility.m4  pcre2_zos.m4
maint/: .gitignore  132html  CheckMan  CheckTxt  Detrail  FetchUcd.sh  FilterCoverage.py  GenerateCommon.py  GenerateTest.py  GenerateTest26.py  GenerateUcd.py  GenerateUcpHeader.py  GenerateUcpTables.py  GenerateUtt.py  LintMan  ManyConfigTests  MultiStage2.py  PrepareRelease  README  RunCoverage  RunManifestTest  RunManifestTest.ps1  RunPerlTest  RunSymbolTest  RunSymbolTest.ps1  UpdateAlways  UpdateCommon.py  UpdateDates.py  manifest-cmakeinstall-freebsd  manifest-cmakeinstall-linux  manifest-cmakeinstall-macos  manifest-cmakeinstall-solaris  manifest-cmakeinstall-windows  manifest-makeinstall-freebsd  manifest-makeinstall-linux  manifest-tarball  pcre2_chartables.c.non-standard  ucptest.c  utf8.c
maint/Unicode.tables/: DerivedBidiClass.txt
maint/cmake-tests/build-interface/: CMakeLists.txt
maint/cmake-tests/install-interface/: CMakeLists.txt  main.c
maint/ucptestdata/: testinput1  testinput2  testoutput1  testoutput2
pages/: .gitignore  hugo.toml  pcre2-colours.txt
pages/archetypes/: default.md
pages/content/: _index.md
pages/demo/: .bashrc  demo.c  demo.sh  runner.sh
pages/layouts/: 404.html  index.html
patches/: pcre2-10.37-Remove-real-POSIX.patch  pcre2-10.39-Fix-incorrect-detection.patch  pcre2-10.40-A-Fixed-a-unicode.patch  pcre2-10.40-B-Fixed-an-issue-affecting.patch  pcre2-10.43-Avoid-LIMIT_HEAP-integer.patch  pcre2-10.43-Fix-heapframe-overflow.patch  pcre2-10.44-Fix-incorrect-compiling.patch  pcre2-10.44-Fix-locking-region.patch  pcre2-10.45-Memory-reports-only-compiled.patch  pcre2-10.47-Fix-for-callback.patch
src/: config-cmake.h.in  config.h  config.h.generic  config.h.in  dftables.c  libpcre2-16.sym  libpcre2-16.sym.in  libpcre2-32.sym  libpcre2-32.sym.in  libpcre2-8.sym  libpcre2-8.sym.in  libpcre2-posix.sym  libpcre2-posix.sym.in  pcre2.h  pcre2.h.generic  pcre2.h.in  pcre2_api_internal.h  pcre2_auto_possess.c  pcre2_byte_order.c  pcre2_chartables.c  pcre2_chartables.c.dist  pcre2_chkdint.c  pcre2_compile.c  pcre2_compile.h  pcre2_compile_cgroup.c  pcre2_compile_class.c  pcre2_config.c  pcre2_context.c  pcre2_convert.c  pcre2_dfa_exec.c  pcre2_dfa_match.c  pcre2_dftables.c  pcre2_error.c  pcre2_exec.c  pcre2_extuni.c  pcre2_find_bracket.c  pcre2_fuzzsupport.c  pcre2_internal.h  pcre2_intmodedep.h  pcre2_intstructs.h  (+43 more)
testdata/: grepinput  grepinput8  greplistBad  grepoutput  grepoutput8  grepoutputC  grepoutputCN  grepoutputCNU  grepoutputCU  grepoutputN  grepoutputUN  testinput1  testinput10  testinput11  testinput12  testinput14  testinput15  testinput16  testinput17  testinput18  testinput19  testinput2  testinput20  testinput21  testinput22  testinput24  testinput25  testinput26  testinput27  testinput28  testinput3  testinput4  testinput5  testinput6  testinput7  testinput8  testinput9  testinputEBC  testinputNEW  testinputNEW8  (+54 more)
vms/: configure.com  pcre2.h_patch
(+48 files in other folders)
